Embrace star imports. Use record objects where applicable rather than Lombok. Make answer module generic.